--- a/Jimmy Huynh CS/src/Components/Components.css
+++ b/Jimmy Huynh CS/src/Components/Components.css
@@ -7,17 +7,29 @@
 
 /* FOOTER CSS */
 
+.button {
+  background-image: linear-gradient(90deg, orange, grey);
+  background-size: 0% 3px;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  transition: background-size 300ms ease;
+}
 /* HEADER CSS */
 .button:hover {
+  background-size: 100% 3px;
   color: goldenrod;
-  /* background-color: black; */
+  /* background-color: blue; */
 }
+
+/* .button:active {
+  color: goldenrod;
+} */
 
 /* PROJECT CSS */
 .project {
   text-align: left;
   padding-top: 10vh;
-  height: 100vh; /*takes up entire screen height */
+  height: 100vh;
 }
 
 /* EXPERIENCE CSS */
@@ -25,4 +37,14 @@
   text-align: left;
   padding-top: 5vh;
   height: 100vh; /*takes up entire screen height */
+}
+
+.footer {
+  padding-top: -5vh;
+  padding-bottom: -5vh;
+  text-align: center;
+}
+
+.contact {
+  padding: auto;
 }
