--- a/Jimmy Huynh CS/src/Components/Components.css
+++ b/Jimmy Huynh CS/src/Components/Components.css
@@ -35,7 +35,7 @@
 /* EXPERIENCE CSS */
 .experience {
   text-align: left;
-  padding-top: 5vh;
+  padding-top: 10vh;
   height: 100vh; /*takes up entire screen height */
 }
 
@@ -47,4 +47,5 @@
 
 .contact {
   padding: auto;
+  height: 100vh; /*takes up entire screen height */
 }
